ship placement and ship collision detection

--- a/src/index.styl
+++ b/src/index.styl
@@ -2,3 +2,13 @@
 @import 'rupture'
 
 global-reset()
+
+fontOpenSans()
+  font-family: 'Open Sans'
+  font-weight: 400
+  font-style: normal
+
+*, html
+  box-sizing border-box
+  fontOpenSans()
+  font-size 14px
