--- a/src/App.styl
+++ b/src/App.styl
@@ -1,2 +1,18 @@
+.header
+  background-color: #000
+  color:#fff
+  height: 50px
+  display flex
+  flex-direction: row
+  align-items: center
+  padding 0 1rem
+
+.brand
+  font-size 1em
+  color #fff
+
 .web3Error
   background-color: #f00
+
+.content
+  padding 1em
