user can join a game

--- a/src/App.styl
+++ b/src/App.styl
@@ -8,11 +8,9 @@
   padding 0 1rem
 
 .brand
+  cursor: pointer
   font-size 1em
   color #fff
-
-.web3Error
-  background-color: #f00
 
 .content
   padding 1em
