--- a/src/containers/NewGame/index.styl
+++ b/src/containers/NewGame/index.styl
@@ -1,13 +1,2 @@
-.selectableShips
-  display flex
-  flex-direction: row
-  align-items: flex-flex-start;
-
-.selectableShip
-  display flex
-  flex-direction: row
-  align-items: flex-flex-start;
-  margin 0 2rem
-
-  div
-    margin 0 0.5rem
+.setupBoard
+  margin 1em auto
