--- a/src/components/GameBoard/index.styl
+++ b/src/components/GameBoard/index.styl
@@ -1,3 +1,5 @@
+@import '../../utils/common.styl'
+
 .table
   border 1px solid #000
   border-collapse: collapse
@@ -7,3 +9,4 @@
     border 1px solid #666
     height 2em
     width 2em
+    text-align: center
