--- a/src/pages/ViewGame/index.styl
+++ b/src/pages/ViewGame/index.styl
@@ -38,14 +38,18 @@
   font-size 1.2rem
 
 $marker
-  color: #fff
-  font-size 0.5rem
-  padding 5px
+  @extend $flexColumn
+  width 100%
+  height 100%
+  font-size 1.5rem
+  padding 0.1em
+  & > i
+    display block
 
 .hitMarker
   @extend $marker
-  background-color: #f00
+  color: #f00
 
 .missMarker
   @extend $marker
-  background-color: #999
+  color: #999
