--- a/src/utils/common.styl
+++ b/src/utils/common.styl
@@ -10,3 +10,10 @@ $flexColumn
   flex-direction: column
   align-items: center
   justify-content: flex-start
+
+$coverParent
+  position absolute
+  top 0
+  left 0
+  bottom 0
+  right 0
