fix up game tables

--- a/src/pages/ViewGame/index.styl
+++ b/src/pages/ViewGame/index.styl
@@ -35,8 +35,15 @@
   padding 1rem
 
 .playerId
+  @extend $flexRowWrap
+  justify-content: center
   font-size 0.8rem
   margin-bottom 1rem
+
+.activePlayerIcon
+  font-size 2rem
+  color #A60CE8
+  margin-right 0.5em
 
 .playerHits
   font-size 0.7rem
