--- a/src/components/GamesTable/index.css
+++ b/src/components/GamesTable/index.css
@@ -3,6 +3,12 @@
   font-size: 0.9rem;
 }
 
+.ReactTable .rt-nodata {
+  top: 70%;
+  padding 0.1em 0.3m;
+  background-color: rgba(0, 0, 0, 0);
+}
+
 .ReactTable .rt-tr {
   background-color: #fff;
 }
