--- a/src/components/GamesTable/index.css
+++ b/src/components/GamesTable/index.css
@@ -5,7 +5,7 @@
 
 .ReactTable .rt-nodata {
   top: 70%;
-  padding: 0.1em 0.3m;
+  padding: 0.1em 0.3em;
   background-color: rgba(0, 0, 0, 0);
 }
 
