added github link

--- a/src/components/Button/index.styl
+++ b/src/components/Button/index.styl
@@ -1,6 +1,8 @@
+@import '../../utils/common.styl'
+
 .button
-  background-color: #396AFF
-  border 1px solid #396AFF
+  background-color: $linkColor
+  border 1px solid $linkColor
   color #fff
   padding 1em 1.2em
   font-size 1rem
