--- a/src/App.styl
+++ b/src/App.styl
@@ -2,8 +2,10 @@
   background-color: #000
   color:#fff
   height: 50px
+  width 100vw
   display flex
   flex-direction: row
+  justify-content: space-between
   align-items: center
   padding 0 1rem
 
