--- a/src/index.styl
+++ b/src/index.styl
@@ -1,5 +1,6 @@
 @import 'nib'
 @import 'rupture'
+@import 'utils/common.styl'
 
 global-reset()
 
@@ -16,3 +17,13 @@ fontOpenSans()
 h2
   font-size 1.5rem
   margin 0 0 1em
+
+a
+  color $linkColor
+  text-decoration underline
+  &:visited
+  &:link
+    color $linkColor
+  &:hover
+    background-color $linkColor
+    color #fff
