improved logic, fix for responsive

--- a/src/pages/ViewGame/index.styl
+++ b/src/pages/ViewGame/index.styl
@@ -20,11 +20,11 @@
 
 .players
   @extend $flexRowWrap
-  justify-content: space-around
+  justify-content: flex-start
 
 .player
   width 400px
-  margin 0 10px
+  margin 0.5em 10px 0.5em 0
   font-size 0.9rem
 
 .playerBoard
